# benchjack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  README.md  benchjack.py  pyproject.toml  requirements.txt
.claude/skills/benchjack/: SKILL.md
.claude/skills/benchjack/tools/: benchjack_semgrep_rules.yml  docker_analyzer.py  run_bandit.sh  run_hadolint.sh  scan.sh  trust_map.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
audits/: README.md  TEMPLATE.md
audits/FrontierSWE/: README.md  poc.md  recon.md  vuln_scan.md
audits/FrontierSWE/poc/: exploit_agent.py  run.sh
docs/: MANUAL.md
server/: ai_runner.py  app.py  constants.py  event_bus.py  run_state.py  sandbox.py
server/pipeline/: __init__.py  audit.py  hack.py  models.py  prompts.py  utils.py
server/routes/: __init__.py  audit.py  events.py  runs.py  static.py
tests/: conftest.py  test_ai_runner.py  test_api.py  test_docker_analyzer.py  test_event_bus.py  test_models.py  test_run_state.py  test_sandbox.py  test_trust_map.py  test_utils.py
web/: app.js  index.html  style.css
web/js/: api.js  findings.js  handlers.js  main.js  runs.js  scoreboard.js  sse.js  state.js  ui.js  utils.js
